# oma-debcontrol

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: control2json.rs  streaming.rs
src/: buf_parse.rs  lib.rs  parser.rs  stream_parser.rs  tests.rs
src/parser/: complete.rs  mod.rs  streaming.rs
tests/: src-control-file.rs
