[package]
name = "oma-debcontrol"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"
description = "Parse Debian control files"
keywords = ["deb", "debian", "control", "dpkg"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/AOSC-Dev/oma-debcontrol"

[features]
std = ["nom/std"]
verbose-errors = []
default = ["std", "verbose-errors"]

[dependencies.nom]
version = "7.1"
default-features = false
features = ["alloc"]

[dev-dependencies]
anyhow = "1.0.26"
assert_matches = "1.3.0"
indoc = "2.0.3"
json = "0.12.1"

[[example]]
name = "streaming"
required-features = ["std"]
